--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/vim,lua
-# Edit at https://www.toptal.com/developers/gitignore?templates=vim,lua
+# Created by https://www.toptal.com/developers/gitignore/api/vim,lua,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=vim,lua,macos
 
 ### Lua ###
 # Compiled Lua sources
@@ -44,6 +44,38 @@ luac.out
 *.hex
 
 
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
+
 ### Vim ###
 # Swap
 [._]*.s[a-v][a-z]
@@ -65,5 +97,5 @@ tags
 # Persistent undo
 [._]*.un~
 
-# End of https://www.toptal.com/developers/gitignore/api/vim,lua
+# End of https://www.toptal.com/developers/gitignore/api/vim,lua,macos
 n
